# quillvox

./: .gitignore  LICENSE  README.md  audio_transcription.spec  build.py  installer.iss  launcher.py  main.py  main.spec  package.py  pyproject.toml  pyrightconfig.json
app/: console_hider.py  constants.py  general_config.py  stt_worker.py  theme_manager.py  translator.py  update_checker.py  updater.py  user_message.py  waveform_loader_worker.py
app/config/: config_manager.py  general_config.py  stt_config.py  stt_run_config.py
app/locales/: messages.pot
app/locales/ru/LC_MESSAGES/: messages.mo  messages.po
app/models/: file_data.py  main_model.py  stt_config.py  stt_transcript.py  transcript.py
app/resources/: resources.qrc  resources_rc.py
app/resources/styles/: dark.qss  light.qss  style_loader.py
app/utils/: logging_config.py  time_format.py
app/view_model/: audio_player_vm.py  file_selector.py  file_selector_vm.py  general_settings_vm.py  main_vm.py  settings_vm.py  stt_runner_vm.py  stt_settings_vm.py  stt_vm.py  stt_worker_vm.py  transcript_vm.py  waveform_vm.py
app/views/: audio_player.py  audio_player_view.py  main_window.py  menu_bar.py  notifications_view.py  splash_screen.py  transcript_controls.py  transcript_controls_view.py  transcript_view.py  waveform_view.py  waveform_visualizer_view.py
app/views/settings/: general_settings.py  general_settings_view.py  settings.py  settings_view.py  stt_settings.py  stt_settings_view.py
app/views/styles/: theme_palettes.py
app/views/styles/buttons/dark_theme/: flat.qss  setting_category.qss
app/views/styles/buttons/light_theme/: flat.qss  setting_category.qss
app/views/ui_utils/: icons.py  style_loader.py  title.py
dev_tools/: DEVELOPMENT.md  README.md  compile_resources.py  dev_reloader.py  generate_icon_enum.py  generate_icon_literal.py  i18n_compile.py  i18n_extract.py  i18n_update.py
tests/audio/: transcript.txt
