[project]
name = "quillvox"
version = "0.1.0"
description = "An desktop application for audio transcription"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "polib>=1.2.0",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
cuda = [
  "torch>=2.9.1"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "watchdog>=6.0.0",
]
